--- a/styles/style.css
+++ b/styles/style.css
@@ -214,5 +214,62 @@
   width: 65%;
   height: 230px;
 }
+/* Why Web Development Style Ends */
 
+/* My inspiration section styles */
+
+#my-inspiration{
+  width: 1140px;
+  height: 950px;
+  margin: 0 auto;
+  margin-top: 88px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.inspiration-text{
+  width: 852px;
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 48px;
+}
+
+.inspiration-text h3{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 32px;
+  font-weight: 800;
+}
+
+.inspiration-text p{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  opacity: 0.7;
+  margin-top: 24px;
+}
+
+.inspiration-video-box{
+  width: 1140px;
+  height: 614px;
+  padding: 32px;
+  border: 1px solid rgba(13, 19, 33, 0.2);
+  border-radius: 16px;
+}
+
+.inspiration-video{
+  border-radius: 16px;
+  width: 1076px;
+  height: 550px;
+  overflow: hidden;
+}
+/* My Inspiration Style ends */
 
