--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 #banner-section{
   border-top: 2px dashed #0d13214d;
   border-bottom: 2px dashed #0d13214d;
-  width: 1440px;
+  max-width: 1920px;
   height: 652px;
   margin: 0 auto;
   background-image: url(/assets/Hero-bg.png);
@@ -273,6 +273,7 @@
 }
 /* My Inspiration Style ends */
 
+/* My ongoing Target section style */
 #my-ongoing-target{
   width: 1140px;
   height: 463px;
@@ -366,3 +367,137 @@
   border-radius: 16px;
   background: rgba(255, 223, 0, 0.05);
 }
+/* My ongoing target section style ends here */
+
+/* My Next target section styles */
+
+#my-next-target-section{
+  width: 1140px;
+  height: 866px;
+  margin: 0 auto;
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.my-next-target-text{
+  width: 852px;
+  height: 125px;
+  margin: 0 auto;
+  text-align: center;  
+}
+
+.my-next-target-text h3{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 32px;
+  font-weight: 800;
+}
+
+.my-next-target-text p{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 13px;
+  font-weight: 400;
+  opacity: 0.7;
+  margin-top: 24px;
+}
+
+
+.reactjs{
+  width: 100%;
+  height: 219px;
+  display: flex;
+  padding: 40px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 16px;
+  background: rgb(255, 255, 255);
+}
+
+.reactjs-img{
+  height: 100%;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.reactjs-content{
+  height: 100%;
+  width: 85%;
+  text-align: left;
+}
+
+.nodejs{
+  width: 100%;
+  height: 219px;
+  display: flex;
+  padding: 40px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 16px;
+  background: rgb(255, 255, 255);
+}
+
+.nodejs-img{
+  height: 100%;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nodejs-content{
+  height: 100%;
+  width: 85%;
+  text-align: left;
+}
+
+.mongodb{
+  width: 100%;
+  height: 219px;
+  display: flex;
+  padding: 40px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 16px;
+  background: rgb(255, 255, 255);
+}
+
+.mongodb-img{
+  height: 100%;
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mongodb-content{
+  height: 100%;
+  width: 85%;
+  text-align: left;
+}
+
+.reactjs h3, .nodejs h3, .mongodb h3{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 24px;
+  font-weight: 800;
+  margin-bottom: 8px;
+}
+
+.reactjs p, .nodejs p, .mongodb p{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 24px;
+  opacity: 0.7;
+}
+
+.reactjs a, .nodejs a, .mongodb a{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 700;
+}
+
