--- a/styles/style.css
+++ b/styles/style.css
@@ -500,4 +500,63 @@
   font-size: 16px;
   font-weight: 700;
 }
+/* My Next Target section Ends here */
 
+#feedback-section{
+  border: 2px solid red;
+  width: 1140px;
+  height: 314px;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding: 64px 48px;
+  border-radius: 16px;
+  background-image: url(../assets/handshake.jpg);
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.feedback-container{
+  border: 2px solid cyan;
+  width: 1044px;
+  height: 186px;
+}
+
+.feedback-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-text h3{
+  color: rgb(255, 255, 255);
+  font-family: Azeret Mono;
+  font-size: 32px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.feedback-text p{
+  color: rgb(255, 255, 255);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  opacity: 0.7;
+  margin-bottom: 24px;
+}
+
+.feedback-content input{
+  width: 548px;
+  height: 57px;
+  border: 1px solid rgba(13, 19, 33, 0.15);
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+  color: rgba(13, 19, 33, 0.4);
+  font-family: Azeret Mono;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 19px 20px;
+}
