--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
 #banner-section{
   border-top: 2px dashed #0d13214d;
   border-bottom: 2px dashed #0d13214d;
-  max-width: 1920px;
+  max-width: 100%;
   height: 652px;
   margin: 0 auto;
   background-image: url(/assets/Hero-bg.png);
@@ -545,7 +545,7 @@
   font-size: 16px;
   font-weight: 400;
   opacity: 0.7;
-  margin-bottom: 24px;
+  margin-bottom: 40px;
 }
 
 .feedback-content input{
@@ -560,3 +560,30 @@
   font-weight: 400;
   padding: 19px 20px;
 }
+
+.feedback-btn{
+  width: 120px;
+  height: 57px;
+  border-radius: 8px;
+  background: rgb(255, 255, 255);
+  padding: 17px 20px;
+  margin-left: 16px;
+  border: none;
+  outline: none;
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  cursor: pointer;
+}
+
+.feedback-btn:hover{
+  background-color: blueviolet;
+}
+
+.feedback-content{
+  display: flex;
+  justify-content: center;
+}
+
