--- a/styles/style.css
+++ b/styles/style.css
@@ -503,7 +503,6 @@
 /* My Next Target section Ends here */
 
 #feedback-section{
-  border: 2px solid red;
   width: 1140px;
   height: 314px;
   margin: 0 auto;
@@ -519,7 +518,6 @@
 }
 
 .feedback-container{
-  border: 2px solid cyan;
   width: 1044px;
   height: 186px;
 }
@@ -586,4 +584,37 @@
   display: flex;
   justify-content: center;
 }
+/* Feedback Sections Ends here */
+
+/* Footer Section Styles */
+
+#footer-section{
+  width: 100%;
+  height: 100px;
+  padding: 32px 150px;
+  border-radius: 16px;
+  background: rgba(13, 19, 33, 0.03);
+  margin-top: 80px;
+}
+
+.footer-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-text{
+  color: rgb(13, 19, 33);
+  font-family: Azeret Mono;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.footer-icons{
+  width: 160px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 
