--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@
   max-width: 100%;
   height: 652px;
   margin: 0 auto;
-  background-image: url(/assets/Hero-bg.png);
+  background-image: url(../assets/Hero-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
